# SerenWorkbench

./: .gitignore  Makefile  README.md  SECURITY.md  SerenLodestar.slnx  SerenWorkbench.slnx
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  (+1 more)
SerenWorkbench/: SerenWorkbench.pyproj  pyproject.toml  seren-workbench.yaml.sample
SerenWorkbench/seren_workbench/: __init__.py  __main__.py  _version.py  app.py  config.py  tool_registry.py
SerenWorkbench/seren_workbench/dynamic_tools/: __init__.py  dynamic_tool_registry.py  manifest_loader.py  manifest_models.py  param_subst.py  process_dispatcher.py  tool_audit_log.py  web_dispatcher.py  yaml_dispatched_tool.py
SerenWorkbench/seren_workbench/mcp/: __init__.py  server.py
SerenWorkbench/seren_workbench/models/: __init__.py
SerenWorkbench/seren_workbench/models/tools/: cluster_tools.py  consolidator_tools.py  ensure_service_running_tool.py  introspection_and_agency_tools.py  log_tools.py  memory_tools.py  model_tools.py  scheduler_tools.py  self_tools.py  service_control_tools.py  time_tools.py  wait_for_service_tool.py  web_tools.py  which_model_tool.py
SerenWorkbench/seren_workbench/routes/: __init__.py  config.py  info.py  logs.py  tools.py
SerenWorkbench/seren_workbench/tool_config/: __init__.py  mcp_config.py  tool_section.py
SerenWorkbench/seren_workbench/viewer/ui/: body.html  header_aside.html  scripts.js  styles.css  tabs.html
SerenWorkbench/tests/: __init__.py  conftest.py  test_auth.py  test_mcp_endpoint.py  test_mcp_mount.py  test_routes.py  test_smoke.py  test_tool_registry.py
(+1 files in other folders)
